库/XCGUI/XCGUI.pas


function XEle_GetBkManager(hEle: HELE): HBKM; stdcall; external XCGUI_DLL;

function XEle_GetBkManagerEx(hEle: HELE): HBKM; stdcall; external XCGUI_DLL;

procedure XEle_SetBkManager(hEle: HELE; hBkInfoM: HBKM); stdcall; external XCGUI_DLL;

function XEle_GetStateFlags(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEle_DrawFocus(hEle: HELE; hDraw: HDRAW; var Rect: TRect): BOOL; stdcall; external XCGUI_DLL;

procedure XEle_DrawEle(hEle: HELE; hDraw: HDRAW); stdcall; external XCGUI_DLL;

procedure XEle_EnableTransparentChannel(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XEle_SetXCTimer(hEle: HELE; nIDEvent: UINT; uElapse: UINT): BOOL; stdcall; external XCGUI_DLL;

function XEle_KillXCTimer(hEle: HELE; nIDEvent: UINT): BOOL; stdcall; external XCGUI_DLL;

procedure XEle_SetToolTip(hEle: HELE; pText: PWideChar); stdcall; external XCGUI_DLL;

procedure XEle_SetToolTipEx(hEle: HELE; pText: PWideChar; nTextAlign: Integer); stdcall; external XCGUI_DLL;

function XEle_GetToolTip(hEle: HELE): PWideChar; stdcall; external XCGUI_DLL;

procedure XEle_PopupToolTip(hEle: HELE; x: Integer; y: Integer); stdcall; external XCGUI_DLL;

procedure XEle_AdjustLayout(hEle: HELE; nAdjustNo: UINT = 0); stdcall; external XCGUI_DLL;

procedure XEle_AdjustLayoutEx(hEle: HELE; nFlags: Integer = adjustLayout_self; nAdjustNo: UINT = 0); stdcall; external XCGUI_DLL;

function XFont_Create(size: Integer): HFONTX; stdcall; external XCGUI_DLL;

function XFont_CreateEx(pName: PWideChar; size: Integer = 12; style: fontStyle_ = fontStyle_regular): HFONTX; stdcall; external XCGUI_DLL;

function XFont_CreateFromLOGFONTW(pFontInfo: PLOGFONTW): HFONTX; stdcall; external XCGUI_DLL;

function XFont_CreateFromHFONT(hFont: HFONT): HFONTX; stdcall; external XCGUI_DLL;

function XFont_CreateFromFont(pFont: Pointer): HFONTX; stdcall; external XCGUI_DLL;

function XFont_CreateFromFile(pFontFile: PWideChar; size: Integer = 12; style: fontStyle_ = fontStyle_regular): HFONTX; stdcall; external XCGUI_DLL;

procedure XFont_EnableAutoDestroy(hFontX: HFONTX; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XFont_GetFont(hFontX: HFONTX): Pointer; stdcall; external XCGUI_DLL;

procedure XFont_GetFontInfo(hFontX: HFONTX; out pInfo: font_info_); stdcall; external XCGUI_DLL;

function XFont_GetLOGFONTW(hFontX: HFONTX; hdc: HDC; out pOut: PLOGFONTW): BOOL; stdcall; external XCGUI_DLL;

procedure XFont_AddRef(hFontX: HFONTX); stdcall; external XCGUI_DLL;

procedure XFont_Release(hFontX: HFONTX); stdcall; external XCGUI_DLL;

function XFont_GetRefCount(hFontX: HFONTX): Integer; stdcall; external XCGUI_DLL;

procedure XFont_Destroy(hFontX: HFONTX); stdcall; external XCGUI_DLL;

function XFrameWnd_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; pTitle: PWideChar; hWndParent: HWND; XCStyle: Integer): HWINDOW; stdcall; external XCGUI_DLL;

procedure XFrameWnd_GetLayoutAreaRect(hWindow: HWINDOW; out Rect: TRect); stdcall; external XCGUI_DLL;

procedure XFrameWnd_SetView(hWindow: HWINDOW; hEle: HELE); stdcall; external XCGUI_DLL;

procedure XFrameWnd_SetPaneSplitBarColor(hWindow: HWINDOW; color: Integer); stdcall; external XCGUI_DLL;

procedure XFrameWnd_SetTabBarHeight(hWindow: HWINDOW; nHeight: Integer); stdcall; external XCGUI_DLL;

function XFrameWnd_SaveLayoutToFile(hWindow: HWINDOW; pFileName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XFrameWnd_LoadLayoutFile(hWindow: HWINDOW; out aPaneList: HELE; nEleCount: Integer; pFileName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XFrameWnd_AddPane(hWindow: HWINDOW; hPaneDest: HELE; hPaneNew: HELE; align: pane_align_): BOOL; stdcall; external XCGUI_DLL;

function XFrameWnd_MergePane(hWindow: HWINDOW; hPaneDest: HELE; hPaneNew: HELE): BOOL; stdcall; external XCGUI_DLL;

function XImgSrc_LoadFile(pFileName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadFileRect(pFileName: PWideChar; x: Integer; y: Integer; cx: Integer; cy: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadRes(id: Integer; pType: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadZip(pZipFileName: PWideChar; pFileName: PWideChar; pPassword: PWideChar = nil): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadZipRect(pZipFileName: PWideChar; pFileName: PWideChar; pPassword: PWideChar; x: Integer; y: Integer; cx: Integer; cy: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadZipMem(data: Pointer; length: Integer; pFileName: PWideChar; pPassword: PWideChar = nil): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadMemory(pBuffer: Pointer; nSize: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadMemoryRect(pBuffer: Pointer; nSize: Integer; x: Integer; y: Integer; cx: Integer; cy: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadFromImage(pImage: Pointer): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadFromExtractIcon(pFileName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadFromHICON(hIcon: HICON): HIMAGE; stdcall; external XCGUI_DLL;

function XImgSrc_LoadFromHBITMAP(hBitmap: HBITMAP): HIMAGE; stdcall; external XCGUI_DLL;

procedure XImgSrc_EnableAutoDestroy(hImage: HIMAGE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XImgSrc_GetWidth(hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XImgSrc_GetHeight(hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XImgSrc_GetFile(hImage: HIMAGE): PWideChar; stdcall; external XCGUI_DLL;

procedure XImgSrc_AddRef(hImage: HIMAGE); stdcall; external XCGUI_DLL;

procedure XImgSrc_Release(hImage: HIMAGE); stdcall; external XCGUI_DLL;

function XImgSrc_GetRefCount(hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

procedure XImgSrc_Destroy(hImage: HIMAGE); stdcall; external XCGUI_DLL;

function XImage_LoadSrc(hImageSrc: HIMAGE): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadFile(pFileName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadFileAdaptive(pFileName: PWideChar; leftSize: Integer; topSize: Integer; rightSize: Integer; bottomSize: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadFileRect(pFileName: PWideChar; x: Integer; y: Integer; cx: Integer; cy: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadResAdaptive(id: Integer; pType: PWideChar; leftSize: Integer; topSize: Integer; rightSize: Integer; bottomSize: Integer; hInst: HMODULE = 0): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadRes(id: Integer; pType: PWideChar; hInst: HMODULE = 0): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadZip(pZipFileName: PWideChar; pFileName: PWideChar; pPassword: PWideChar = nil): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadZipAdaptive(pZipFileName: PWideChar; pFileName: PWideChar; pPassword: PWideChar; x1: Integer; x2: Integer; y1: Integer; y2: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadZipRect(pZipFileName: PWideChar; pFileName: PWideChar; pPassword: PWideChar; x: Integer; y: Integer; cx: Integer; cy: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadZipMem(data: Pointer; length: Integer; pFileName: PWideChar; pPassword: PWideChar = nil): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadMemory(pBuffer: vint; nSize: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadMemoryRect(pBuffer: vint; nSize: Integer; x: Integer; y: Integer; cx: Integer; cy: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadMemoryAdaptive(pBuffer: vint; nSize: Integer; leftSize: Integer; topSize: Integer; rightSize: Integer; bottomSize: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadFromImage(pImage: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadFromExtractIcon(pFileName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadFromHICON(hIcon: HICON): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_LoadFromHBITMAP(hBitmap: HBITMAP): HIMAGE; stdcall; external XCGUI_DLL;

function XImage_IsStretch(hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XImage_IsAdaptive(hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XImage_IsTile(hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XImage_SetDrawType(hImage: HIMAGE; nType: image_draw_type_): BOOL; stdcall; external XCGUI_DLL;

function XImage_SetDrawTypeAdaptive(hImage: HIMAGE; leftSize: Integer; topSize: Integer; rightSize: Integer; bottomSize: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XImage_SetTranColor(hImage: HIMAGE; color: Integer); stdcall; external XCGUI_DLL;

procedure XImage_SetTranColorEx(hImage: HIMAGE; color: Integer; tranColor: Byte); stdcall; external XCGUI_DLL;

function XImage_SetRotateAngle(hImage: HIMAGE; fAngle: Single): Single; stdcall; external XCGUI_DLL;

procedure XImage_SetSplitEqual(hImage: HIMAGE; nCount: Integer; iIndex: Integer); stdcall; external XCGUI_DLL;

procedure XImage_EnableTranColor(hImage: HIMAGE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XImage_EnableAutoDestroy(hImage: HIMAGE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XImage_EnableCenter(hImage: HIMAGE; bCenter: BOOL); stdcall; external XCGUI_DLL;

function XImage_IsCenter(hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XImage_GetDrawType(hImage: HIMAGE): image_draw_type_; stdcall; external XCGUI_DLL;

function XImage_GetWidth(hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XImage_GetHeight(hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XImage_GetImageSrc(hImage: HIMAGE): HIMAGE; stdcall; external XCGUI_DLL;

procedure XImage_AddRef(hImage: HIMAGE); stdcall; external XCGUI_DLL;

procedure XImage_Release(hImage: HIMAGE); stdcall; external XCGUI_DLL;

function XImage_GetRefCount(hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

procedure XImage_Destroy(hImage: HIMAGE); stdcall; external XCGUI_DLL;

function XLayout_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI): HELE; stdcall; external XCGUI_DLL;

function XLayout_CreateEx(hParent: HXCGUI): HELE; stdcall; external XCGUI_DLL;

function XLayout_IsEnableLayout(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

procedure XLayout_EnableLayout(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XLayout_ShowLayoutFrame(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XLayout_GetWidthIn(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XLayout_GetHeightIn(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XLayoutBox_EnableHorizon(hLayoutBox: HXCGUI; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XLayoutBox_EnableAutoWrap(hLayoutBox: HXCGUI; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XLayoutBox_EnableOverflowHide(hLayoutBox: HXCGUI; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XLayoutBox_SetAlignH(hLayoutBox: HXCGUI; nAlign: layout_align_); stdcall; external XCGUI_DLL;

procedure XLayoutBox_SetAlignV(hLayoutBox: HXCGUI; nAlign: layout_align_); stdcall; external XCGUI_DLL;

procedure XLayoutBox_SetAlignBaseline(hLayoutBox: HXCGUI; nAlign: layout_align_axis_); stdcall; external XCGUI_DLL;

procedure XLayoutBox_SetSpace(hLayoutBox: HXCGUI; nSpace: Integer); stdcall; external XCGUI_DLL;

procedure XLayoutBox_SetSpaceRow(hLayoutBox: HXCGUI; nSpace: Integer); stdcall; external XCGUI_DLL;

function XLayoutFrame_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI): HELE; stdcall; external XCGUI_DLL;

procedure XLayoutFrame_ShowLayoutFrame(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XListBox_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

procedure XListBox_EnableFixedRowHeight(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;
